--- a/index.html
+++ b/index.html
@@ -7,66 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game of life</title>
     <script src="https://unpkg.com/konva@9/konva.min.js"></script>
-    <style>
-        @property --ЫЫЫЫ {
-            syntax: "<number>";
-            inherits: false;
-            initial-value: 0;
-        }
-
-        @keyframes ЫЫЫЫShift {
-            0% { --ЫЫЫЫ: 0; }
-            100% { --ЫЫЫЫ: 360; }
-        }
-
-        button {
-            background: linear-gradient(135deg, hsl(var(--ЫЫЫЫ), 80%, 50%), hsl(calc(var(--ЫЫЫЫ) + 60), 80%, 50%));
-            animation: ЫЫЫЫShift 5s infinite linear;
-        }
-        button {
-            margin: 10px;
-            border-radius: 8px;
-            border-style: none;
-            box-sizing: border-box;
-            color: #FFFFFF;
-            cursor: pointer;
-            flex-shrink: 0;
-            font-size: 16px;
-            font-weight: 700;
-            height: 4rem;
-            padding: 0 1.6rem;
-            text-align: center;
-            text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-            transition: all .5s;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-        }
-
-        button:hover {
-            box-shadow: hsl(var(--ЫЫЫЫ), 80%, 50%) 0 1px 30px;
-            transition-duration: .1s;
-        }
-
-        @media (min-width: 768px) {
-            button {
-                padding: 0 2.6rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div style="display: flex">
     <div id="game_grid"></div>
-    <div>
+    <aside>
         <button id="start" role="button">Start</button>
         <button id="randomize" role="button">Randomize</button>
+        <button id="clear" role="button">Clear</button>
 
         <div style="margin-top: 2rem;margin: 10px;">
-            <h2 id="lc"></h2>
-            <h2 id="gen"></h2>
+            <h2 id="lc">Live cells: <span></span></h2>
+            <h2 id="gen">Gen number: <span></span></h2>
         </div>
-    </div>
+    </aside>
 </div>
 
 </body>
@@ -74,49 +30,96 @@
 <script>
     const startButton = document.getElementById('start');
     const randomizeButton = document.getElementById('randomize');
-    const lifeCellsTitle = document.getElementById('lc');
-    const genNumTitle = document.getElementById('gen');
+    const lifeCellsTitle = document.querySelector('#lc>span');
+    const genNumTitle = document.querySelector('#gen>span');
+    const clearButton = document.getElementById('clear');
 
+    const [xDim, yDim] = [200, 200];
 
+    const randColor = () => {
+        return Math.round(Math.random() * 255);
+    }
 
-    const gameState = new GameOfLife(200, 200);
+    const gameState = new GameOfLife(xDim, yDim);
     gameState.randomizeData();
-    const cellSize = 5;
+    let cellSize = 5;
 
     const stage = new Konva.Stage({
         container: 'game_grid',
-        width: 1000,
-        height: 1000
+        width: xDim * cellSize,
+        height: yDim * cellSize,
+        draggable: true,
     });
+
     const layer = new Konva.Layer();
 
     let timeoutId = -1;
 
-    function start() {
+    const render = (data) => {
         layer.destroyChildren();
-
-        const data = gameState.iterate()
         data.grid.forEach(((row, y) => {
             row.forEach(((cell, x) => {
                 if (cell === 1) {
-                    layer.add(new Konva.Rect({
+                    const rect = new Konva.Rect({
                         x: x * cellSize,
                         y: y * cellSize,
                         width: cellSize,
                         height: cellSize,
-                        fill: 'green',
-                    }));
+                        fill: `indigo`,
+                    });
+                    layer.add(rect);
                 }
             }))
         }))
-        lifeCellsTitle.innerText = "Live cells: " + data.liveCells;
-        genNumTitle.innerText = "Gen number: " + data.gen;
+        lifeCellsTitle.innerText = data.liveCells;
+        genNumTitle.innerText = data.gen;
+
         stage.add(layer);
         layer.draw();
-        timeoutId = setTimeout(() => {
-            start();
-        }, 20);
     }
+
+    function start() {
+        gameState.iterate()
+        render(gameState.getGrid);
+
+        timeoutId = setTimeout(start, 200);
+    }
+
+    const getEventCell = (x, y) => {
+        return [Math.floor(y / cellSize), Math.floor(x / cellSize)]
+    }
+
+    stage.on('click', function ({evt}) {
+        const [xCellPos, yCellPos] = getEventCell(evt.clientX, evt.clientY);
+        if(gameState.getGrid.grid[xCellPos][yCellPos] === 1) {
+            gameState.removeItem(xCellPos, yCellPos)
+        } else {
+            gameState.addItem(xCellPos, yCellPos);
+        }
+
+        render(gameState.getGrid);
+    })
+
+    stage.on('wheel', ({evt}) => {
+        evt.preventDefault();
+        const scaleUp = -1;
+        const scaleDown = 1;
+        const direction = evt.deltaY > 0 ? scaleDown : scaleUp;
+
+        if(direction === scaleDown) {
+            if(cellSize > 1) {
+                cellSize -= 1;
+                render(gameState.getGrid);
+            }
+        }
+
+        if(direction === scaleUp) {
+            if(cellSize < 20) {
+                cellSize += 1;
+                render(gameState.getGrid);
+            }
+        }
+    });
 
     startButton.addEventListener('click', () => {
         if (startButton.innerText === 'Start' || startButton.innerText === 'Resume') {
@@ -130,7 +133,13 @@
 
     randomizeButton.addEventListener('click', () => {
         gameState.randomizeData();
+        render(gameState.getGrid);
     });
+
+    clearButton.addEventListener('click', () => {
+        gameState.clear();
+        render(gameState.getGrid);
+    })
 
 </script>
 </html>
